Maquetando cabecera no responsive

--- a/index.html
+++ b/index.html
@@ -2,9 +2,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Todas las noticias última hora de Mallorca, España, Mundo sobre la actualidad, local, Palma, part forana, sucesos, ocio y deporte.">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <title>LAVY Ultima hora</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="top-box">
+            <div class="top-box__element">
+                <a href="#"><p><span>HOY ES NOTICIA:</span> Hito farmacéutico - Multas - Ordenanza de animales</p></a>
+            </div>
+            <div class="top-box__element">
+                <a href="#">MALLORCA |</a> 
+                <a href="#">MENORCA |</a> 
+                <a href="#">IBIZA Y FORMENTERA</a>
+            </div>
+        </div>
+        <div class="title-box">
+            <div class="title-box__element menu-icon">
+                <div class="menu-icon__element"></div>
+                <div class="menu-icon__element"></div>
+                <div class="menu-icon__element"></div>
+            </div>
+            <div class="title-box__element title">
+                <p>Ultima Hora</p>
+            </div>
+            <div class="title-box__element buttons">
+                <div class="title-box__element__sign-in button-box button">
+                    <div class="button__element">
+                        <span>Iniciar sesión</span>
+                    </div>
+                    <div class="button__element">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7.05 6.6L5.99 5.54c3.57-3.46 9.27-3.37 12.73.19s3.37 9.27-.19 12.73-9.27 3.37-12.73-.19c-.1-.1-.2-.21-.3-.32l1.06-1.06c2.7 3.14 7.43 3.51 10.58.81s3.51-7.43.81-10.58-7.43-3.51-10.58-.81c-.11.09-.22.19-.32.29z"></path><path d="M5.86 12.29H0v-1.5h5.86M12.5 18c1.01 0 1.99-.26 2.86-.77.86-.47 1.6-1.15 2.14-1.97-.01-.52-.33-.99-.94-1.42-.53-.37-1.21-.66-2.04-.9-.75-.2-1.42-.31-2.03-.31s-1.28.1-2.03.31c-.83.23-1.5.53-2.02.9-.61.43-.93.91-.94 1.42.54.82 1.28 1.5 2.14 1.97.91.51 1.86.77 2.86.77zm0-11c-.44 0-.85.11-1.24.35A2.563 2.563 0 0010 9.54c0 .45.11.87.34 1.26.23.39.53.71.92.94a2.4 2.4 0 002.48 0c.39-.23.69-.54.92-.94.23-.39.34-.81.34-1.26 0-.45-.11-.87-.34-1.26-.22-.39-.54-.71-.92-.93A2.4 2.4 0 0012.5 7z"></path><path d="M3.68 8.61v5.87h-1.5V8.61"></path>
+                        </svg>
+                    </div>
+                </div>
+                <div class="title_box__element__register buttons-box">
+                    <button class="title-box__element__register button">Regístrate</button>
+                </div>
+            </div>
+        </div>
+        <div class="nav-inline">
+            <div class="nav-inline__element">
+                <svg viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
+                </svg>
+            </div>
+            <div class="nav-inline__element">
+                NOTICIAS
+            </div>
+            <div class="nav-inline__element">
+                SUCESOS
+            </div>
+            <div class="nav-inline__element">
+                DEPORTES
+            </div>
+            <div class="nav-inline__element">
+                OPINIÓN
+            </div>
+            <div class="nav-inline__element">
+                XALOC
+            </div>
+            <div class="nav-inline__element">
+                PARTICIPA
+            </div>
+            <div class="nav-inline__element">
+                OCIO
+            </div>
+            <div class="nav-inline__element">
+                VIPS
+            </div>
+            <div class="nav-inline__element">
+                GUÍA ÚTIL
+            </div>
+            <div class="nav-inline__element">
+                MONOGRÁFICOS
+            </div>
+            <div class="nav-inline__element">
+                <svg viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                </svg>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="newsletter">
+            <div class="newsletter__ads">
+                <img src="img/anuncio1.png" alt="anuncio PHP">
+            </div><div class="newsletter__ads">
+                <img src="img/anuncio2.png" alt="anuncio PHP">
+            </div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <!--FUENTES-->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>
+            WebFont.load({
+                google: {
+                    families: ['Alfa+Slab+One', 'Roboto+Condensed']
+                }
+            });        
+    </script>
+        <script src="js/match-media.js"></script>
 </body>
 </html>
