--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="top-box">
-            <div class="top-box__element">
+            <div id="top-box__one" class="top-box__element">
                 <a href="#"><p><span>HOY ES NOTICIA:</span> Hito farmacéutico - Multas - Ordenanza de animales</p></a>
             </div>
             <div class="top-box__element">
@@ -32,7 +32,7 @@
             <div class="title-box__element buttons">
                 <div class="title-box__element__sign-in button-box button">
                     <div class="button__element">
-                        <span>Iniciar sesión</span>
+                        <span>Iniciar sesión&nbsp;</span>
                     </div>
                     <div class="button__element">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7.05 6.6L5.99 5.54c3.57-3.46 9.27-3.37 12.73.19s3.37 9.27-.19 12.73-9.27 3.37-12.73-.19c-.1-.1-.2-.21-.3-.32l1.06-1.06c2.7 3.14 7.43 3.51 10.58.81s3.51-7.43.81-10.58-7.43-3.51-10.58-.81c-.11.09-.22.19-.32.29z"></path><path d="M5.86 12.29H0v-1.5h5.86M12.5 18c1.01 0 1.99-.26 2.86-.77.86-.47 1.6-1.15 2.14-1.97-.01-.52-.33-.99-.94-1.42-.53-.37-1.21-.66-2.04-.9-.75-.2-1.42-.31-2.03-.31s-1.28.1-2.03.31c-.83.23-1.5.53-2.02.9-.61.43-.93.91-.94 1.42.54.82 1.28 1.5 2.14 1.97.91.51 1.86.77 2.86.77zm0-11c-.44 0-.85.11-1.24.35A2.563 2.563 0 0010 9.54c0 .45.11.87.34 1.26.23.39.53.71.92.94a2.4 2.4 0 002.48 0c.39-.23.69-.54.92-.94.23-.39.34-.81.34-1.26 0-.45-.11-.87-.34-1.26-.22-.39-.54-.71-.92-.93A2.4 2.4 0 0012.5 7z"></path><path d="M3.68 8.61v5.87h-1.5V8.61"></path>
@@ -89,6 +89,73 @@
     </header>
 
     <main>
+        <div class="nav-list">
+            <div class="nav-list__option">
+                <div class="icon">
+                    <svg viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                    </svg>
+                </div>
+                <div class="text">
+                    <form action="" method="">
+                        <input type="text" placeholder="Buscar...">
+                    </form>
+                </div>
+            </div>
+
+            <div class="nav-list__option">
+                <div class="text">PORTADA</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">NOTICIAS</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">DEPORTES</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">SUCESOS</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">OPINIÓN</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">XALOC</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">PARTICIPA</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">OCIO</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">COMER Y BEBER</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">VIPS</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">GUÍA ÚTIL</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">MONOGRÁFICOS</div>
+                <div class="plus-icon">+</div>
+            </div>
+            <div class="nav-list__option">
+                <div class="text">SERVICIOS</div>
+                <div class="plus-icon">+</div>
+            </div>
+        </div>
         <div class="newsletter">
             <div class="newsletter__ads">
                 <img src="img/anuncio1.png" alt="anuncio PHP">
