AÑANDIENDO ESTRUCTURA SASS - FALTAN MIXINGS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="title-box__element title">
-                <p>Ultima Hora</p>
+                <h1>Ultima Hora</h1>
             </div>
             <div class="title-box__element buttons">
                 <div class="title-box__element__sign-in button-box button">
