JS progress bar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 </div>
             </div>
         </div>
+        <div class="progress-container">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
         <div class="nav-inline">
             <div class="nav-inline__element">
                 <svg viewBox="0 0 24 24">
