Animación icono de burger

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         </div>
         <div id="sticky-menu">
             <div class="title-box">
-                <div class="title-box__element menu-icon active">
-                    <div class="menu-icon__element"></div>
-                    <div class="menu-icon__element"></div>
-                    <div class="menu-icon__element"></div>
+                <div class="title-box__element menu-icon">
+                    <button class="menu-btn" type="button" aria-label="Menu" aria-controls="navigation">
+                        <span class="menu-btn__block">
+                          <span class="menu-btn__inner"></span>
+                        </span>
+                    </button>
                 </div>
                 
                 <div class="title-box__element title">
