--- a/index.html
+++ b/index.html
@@ -257,6 +257,6 @@
                 }
             });        
     </script>
-    <script src="js/movement.js"></script>
+    <script type="module" src="js/movement.js"></script>
 </body>
 </html>
